css/todo.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: sans-serif;
}
html,
body {
  height: 100%;
}

body {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
  position: relative;
}
main {
  margin: 20px 0px;
  width: 47%;
  height: 95vh;
  box-shadow: 0 0 10px 2px rgb(93, 95, 89);
  color: black;
  display: flex;
  flex-direction: column;
  align-items: center;
  border-radius: 15px;
  /* overflow: scroll; */
  background: #2a7b9b;
  background: linear-gradient(90deg, rgba(42, 123, 155, 1) 0%, rgba(87, 199, 133, 1) 50%, rgba(237, 221, 83, 1) 100%);
}
#nameGreet {
  margin-top: 10px;
}

.heading {
  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
  text-align: center;
  color: black;
  padding: 0px 0px 10px 0px;
  text-shadow: 0px 0px 5px #09a0e7;
  opacity: 0.9;
}

.quote {
  font-size: 18px;
}
#taskinput-container {
  position: relative;
  /* background-color: white; */
}
#addtask {
  height: 50px;
  width: 440px;
  padding: 0px 50px 0px 10px;
  outline: none;
  border: none;
  border-radius: 30px;
  font-family: monospace;
  font-size: 18px;
  background-color: transparent;
  border: 1px solid black;
  margin-top: 10px;
}
#addtask:focus {
  border: none;
  outline: 3px solid rgb(23, 12, 226);
  background-color: white;
}
#addtask::placeholder {
  color: black;
}
#addbtn {
  margin-left: 25px;
  height: 40px;
  width: 40px;
  outline: none;
  border: none;
  border-radius: 50%;
  background-color: rgb(27, 199, 139);
  color: white;
  font-size: bolder;
  font-family: monospace;
  font-size: 18px;
  position: absolute;
  top: 15px;
  right: 4px;
}
#addbtn:hover {
  background-color: blue;
}
#addbtn:active {
  outline: 2px solid black;
}

#no-todo-item {
  display: none;
  display: flex;
  flex-direction: column;
  text-align: center;
  justify-content: center;
}

#no-todo-item img {
  width: 350px;
  height: 350px;
  opacity: 0.9;
}
#no-todo-item p {
  color: black;
  font-family: cursive;
}

#filter-section {
  margin: 25px 0px;
  width: 67%;
  height: 60px;
  border-radius: 15px;
  /* box-shadow: 0 0 10px 2px rgb(225, 215, 219);
   */
  /* border: 1px solid  green;  */

  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  gap: 20px;
}
#filter-section > div > input {
  padding: 5px;
  border-radius: 25px;
  border: none;
  outline: none;
  font-size: 14px;
  background-color: transparent;
  border: 1px solid black;
}
#filter-section > div > select {
  padding: 5px;
  border-radius: 25px;
  border: none;
  outline: none;
  font-size: 14px;
  background-color: transparent;
  border: 1px solid black;
}

#filter-section select:focus {
  background-color: white;
}
#filter-section input[type="date"]:focus {
  background-color: white; /* or black */
  color: rgb(0, 0, 0); /* optional: text color */
}

#filter-section button {
  width: 80px;
  padding: 8px 5px;
  border-radius: 25px;
  border: none;
  outline: none;
  font-size: 14px;
  /* background-color: rgba(11, 211, 151, 0.663); */
  background-color: transparent;
  border: 1px solid black;
}
#filter-section button:hover {
  background-color: rgb(14, 61, 230);
  color: rgb(255, 255, 255);
}
#todo-container {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  padding-top: 20px;
  margin-bottom: 0px;
  overflow: scroll;
  overflow-y: auto;
  overflow-x: hidden;
  scrollbar-width: thin; /* Firefox */
  scrollbar-color: #08cb8a transparent;
  /* border-top: 2px solid green; */
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
}
.task-card {
  width: 67%;
  min-height: 50px;
  max-height: 150px;
  color: black;
  border-radius: 15px;
  display: flex;
  align-items: center;
  /* justify-content: flex-start; */
  padding: 10px;
  gap: 20px;
  margin-bottom: 20px;
  box-shadow: 0px 0px 10px 2px rgb(170, 159, 159);
  flex-wrap: wrap; /* allow text to wrap within the flexbox */
  word-wrap: break-word; /* break long words */
  overflow-wrap: break-word;
  overflow: hidden;
  position: relative;
  background-image: linear-gradient(to top, #a981bb 9%, #ffc8a9 100%);
  background: linear-gradient(to bottom, #323232 0%, #3f3f3f 40%, #1c1c1c 150%),
    linear-gradient(to top, rgba(255, 255, 255, 0.4) 0%, rgba(0, 0, 0, 0.25) 200%);
  background-blend-mode: multiply;
  box-shadow: 0px 0px 10px 2px #cbce24;
}
.task-card > input {
  height: 100%;
  color: rgb(255, 255, 255);
  flex: 1; /* allow it to grow and shrink */
  min-width: 0;
  word-break: break-word;
  padding: 10px;
  border: none;
  border-radius: 10px;
  font-family: sans-serif;
  font-size: 14px;
  background-color: transparent;
}

.task-card > span {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 10px;
  position: absolute;
  right: 0px;
  margin-right: 8px;
}
.task-card > span > button {
  background-color: transparent;
  padding: 5px 7px;
  outline: none;
  border: none;
  cursor: pointer;
}

.task-card > span > button > .fa-circle-check {
  height: 10px;
  width: 10px;
  color: rgb(15, 207, 15);
}
.task-card > span > button > .fa-trash {
  color: red;
}
.task-card > span > button > .fa-pen {
  color: rgba(255, 255, 255, 0.778);
}

.task-card > span > button > .fa-check {
  color: rgb(235, 149, 20);
}
.task-card > span > button:hover {
  transform: scale(1.3);
}
.completed {
  text-decoration: line-through;
  color: gray;
  opacity: 0.7;
}

.star-container,
.power-container {
  display: flex;
  align-items: center;
  justify-content: right;
  position: absolute;
  right: 10px;
  /* background-color: #08cb8a; */
}
.power-container {
  top: 2vh;
}
.star-container {
  bottom: 2vh;
}
.fa-github,
.fa-power-off {
  font-size: 25px;
  color: black;
  padding: 10px;
  border-radius: 10px;
}
.fa-power-off {
  color: rgb(11, 27, 239);
}
.fa-power-off:active {
  color: red;
}
.fa-power-off:hover {
  transition: all 0.3s ease;
  transform: translateY(2px);
  box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0);
}
.star-container p {
  opacity: 0.9;
  font-family: monospace;
  pointer-events: auto;
  color: rgba(0, 0, 0, 0.774);
}

#noFilteredTask {
  font-family: monospace;
  font-weight: bold;
  font-size: 16px;
  letter-spacing: 1px;
}
/*For mobile view ( 0-480px ) */
@media (max-width: 480px) {
  main {
    width: 95%;
    margin: 10px 0;
    height: 90vh;
    padding-bottom: 35px;
  }

  #addtask {
    width: 85vw;
    font-size: 16px;
    /* background-color: #1c1c1c; */
  }

  #filter-section {
    flex-direction: row;
    height: auto;
    width: 90%;
    gap: 10px;
  }

  .task-card {
    width: 90%;
    font-size: 12px;
    flex-direction: column;
    align-items: flex-start;
  }

  .fa-github,
  .fa-power-off {
    font-size: 20px;
  }
  .statistics,
  .stats-minimised {
    width: 95% !important;
    display:flex !important;
    flex-direction: row !important;
    flex-wrap: wrap;
    align-items: center;
    gap: 0px !important;
    padding: 10px;
    border-radius: 10px;
    /* background-color: yellowgreen !important; */
  }
  .statistics > section,
  .statistics > .minimised {
    width: 55% !important;
      margin: 0 35px 0 10px !important;
    /* background-color: #764ba2 !important; */
  }

  .stat-value {
    font-size: 1rem;
  }

  .stat-lebel {
    font-size: 0.85rem;
  }

  #expand-btn {
    top: 10%;
    right: 5px;
    padding: 3px 5px;
  }
}
/*For Tablets (481-768px) */
@media (min-width: 481px) and (max-width: 768px) {
  main {
    width: 85%;
  }

  #addtask {
    width: 75%;
  }

  #filter-section {
    width: 85%;
  }

  .task-card {
    width: 85%;
  }
}
/*For desktops ( 769px- above ) */
@media (min-width: 769px) {
  main {
    width: 47%;
  }

  #filter-section {
    width: 67%;
  }

  .task-card {
    width: 67%;
  }
}
/*============================*/

.statistics {
  width: 55%;
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  align-items: center;
  justify-content: space-evenly;
  gap: 5px;
  margin: 11px 0px;
  background: rgba(255, 255, 255, 0.08);
  backdrop-filter: blur(8px);
  border: 1px solid rgba(255, 255, 255, 0.15);
  border-radius: 15px;
  position: relative;
}
.statistics > section {
  height: 50px;
  width: 100px;
  margin: 0 35px 0 35px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  gap: 1px;
  /* background-color: #09a0e7; */
}
.stat-value {
  color: rgba(127, 18, 211, 0.796);
  font-weight: bolder;
  font-size: 1.3rem;
}
.stat-lebel {
  color: black;
  opacity: 0.8;
}
#complition-section {
  width: 120px;
  /* background-color: red; */
}
.stats-minimised {
  width: 60%; /* or higher than 55% if needed */
  display: flex;
  flex-wrap: nowrap; /* force items to stay in one line */
  flex-direction: row;
  align-items: center;
  justify-content: space-evenly; /* spread them out evenly */
  padding: 0;
  gap: 0px; /* or 0 */
}
.statistics > .minimised {
  height: 60px;
  width: auto; /* or reduce fixed width if needed */
  flex: 1;
  margin: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: row-reverse;
  gap: 5px;
  padding: 0;
}
.minimised-none-complition-sec {
  display: none !important;
}

.stat-lebel-minimised::after {
  content: ":";
  margin-left: 2px;
}

#expand-btn {
  position: absolute;
  right: 3px;
  top: 25%;
  border: none;
  outline: none;
  background-color: rgba(35, 125, 227, 0.219);
  border-radius: 40%;
  padding: 4px 6px;
  background-color: #08cb8a;
  margin-left: 25px;
}
#expand-btn > i {
  font-size: 16px;
  color: blue;
  /* color: white; */
}

